<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.PictureScreenActivity">

    <ImageView android:id="@+id/apmImageView"
        android:layout_width="320dp"
        android:layout_height="180dp"
        android:layout_margin="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup android:id="@+id/apmRgType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apmImageView"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton android:id="@+id/apmRbGlide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apm_rb_glide"
            android:checked="true"
            android:layout_weight="1"
            />

        <RadioButton android:id="@+id/apmRbPicasso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/apm_rb_picasso"
            android:checked="false"
            android:layout_weight="1"
            />

    </RadioGroup>

    <Button android:id="@+id/apmBtnVector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/apm_btn_vector"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apmRgType"
        app:layout_constraintEnd_toStartOf="@+id/apmBtnRaster"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <Button android:id="@+id/apmBtnRaster"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/apm_btn_raster"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/apmBtnVector"
        app:layout_constraintTop_toTopOf="@+id/apmBtnVector"
        app:layout_constraintBottom_toBottomOf="@+id/apmBtnVector"/>

    <Button android:id="@+id/apmBtnRemote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/apm_btn_remote"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/apmBtnVector"
        app:layout_constraintStart_toStartOf="@+id/apmBtnVector"
        app:layout_constraintTop_toBottomOf="@+id/apmBtnVector"/>

    <Button android:id="@+id/apmBtnGif"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/apm_btn_gif"
        app:layout_constraintEnd_toEndOf="@+id/apmBtnRaster"
        app:layout_constraintStart_toStartOf="@+id/apmBtnRaster"
        app:layout_constraintTop_toTopOf="@+id/apmBtnRemote"
        app:layout_constraintBottom_toBottomOf="@+id/apmBtnRemote"/>

    <Button android:id="@+id/apmBtnClear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/apm_btn_clear"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/apmBtnRemote"
        app:layout_constraintTop_toBottomOf="@+id/apmBtnRemote"
        app:layout_constraintEnd_toEndOf="@+id/apmBtnGif"/>
</androidx.constraintlayout.widget.ConstraintLayout>